--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,16 @@
-body {
-  background-color: beige; }
+section {
+  padding-top: 8em;
+}
+
+.profile {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.profile img {
+  border-radius:  1.6em;
+  margin-right: 0.4em;
+  padding-bottom: 0.2em;
+  height: 3em;
+  width: auto;
+}
