--- a/partials/people.html
+++ b/partials/people.html
@@ -1,34 +1,34 @@
 <div class="row row-cols-4">
 	<div class="profile col">
-		<img src="assets/img/umnah.jpg">
+		<img src="img/umnah.jpg">
 		<span>Umnah Aslam</span>
 	</div>
 	<div class="profile col">
-		<img src="assets/img/mojca.jpg">
+		<img src="img/mojca.jpg">
 		<span>Mojca Fortunat</span>
 	</div>
 	<div class="profile col">
-		<img src="assets/img/madde.jpg">
+		<img src="img/madde.jpg">
 		<span>Madeleine Kiær</span>
 	</div>
 	<div class="profile col">
-		<img src="assets/img/xiyu.jpg">
+		<img src="img/xiyu.jpg">
 		<span>Xiyu Li</span>
 	</div>
 	<div class="profile col">
-		<img src="assets/img/ruiyi.jpg">
+		<img src="img/ruiyi.jpg">
 		<span>Ruiyi Liu</span>
 	</div>
 	<div class="profile col">
-		<img src="assets/img/gustav.jpg">
+		<img src="img/gustav.jpg">
 		<span>Gustav Moorhouse</span>
 	</div>
 	<div class="profile col">
-		<img src="assets/img/jan.jpg">
+		<img src="img/jan.jpg">
 		<span>Jan Ostrówka</span>
 	</div>
 	<div class="profile col">
-		<img src="assets/img/weijian.jpg">
+		<img src="img/weijian.jpg">
 		<span>Weijian Xu</span>
 	</div>
 </div>
