--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,13 @@ section {
   height: 3em;
   width: auto;
 }
+
+.nav-link {
+  padding: 0.5em 1em;
+  background: white;
+  border-radius: 0.4em;
+}
+
+.nav-link .active {
+  background: #edf5ff;
+}
