--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -11,6 +11,14 @@ section:not(:first-of-type) {
   padding-top: 2em;
 }
 
+.logo-container {
+  
+}
+
+.logo {
+  max-width: 100%;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -34,10 +42,25 @@ img {
   border-radius: 0.4em;
 }
 
+.nav-link:hover {
+  background: #f6f8fc;
+}
+
+header .nav-link:hover {
+  background: unset;
+}
+
 .nav-link.active {
   background: #edf5ff;
+  color: #0a58ca;
 }
 
 .card {
   border-color: #f3f3f3;
+}
+
+footer {
+  margin-top: 8em;
+  background: #132740;
+  color: #abacba;
 }
