--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -19,6 +19,16 @@ section:not(:first-of-type) {
   max-width: 100%;
 }
 
+.badge {
+  font-size: 0.8em;
+  font-weight: 500;
+}
+
+.badge.text-bg-light {
+  background: #f1f1f1 !important;
+  color: #777777 !important;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -53,6 +63,7 @@ header .nav-link:hover {
 .nav-link.active {
   background: #edf5ff;
   color: #0a58ca;
+  font-weight: 500;
 }
 
 .card {
