--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -29,6 +29,10 @@ section:not(:first-of-type) {
   color: #777777 !important;
 }
 
+.exhibit-overview .card img {
+  filter: contrast(0.7) brightness(1.8) grayscale(0.9);
+}
+
 img {
   max-width: 100%;
   height: auto;
