--- a/partials/nav.html
+++ b/partials/nav.html
@@ -9,7 +9,7 @@
 			<a class="nav-link" id="home" href="/">Home</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="naturalness" href="naturalnes.html">Naturalness</a>
+			<a class="nav-link" id="naturalness" href="naturalness.html">Naturalness</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" id="technology" href="technology.html">Technology</a>
