--- a/partials/showcase-content.html
+++ b/partials/showcase-content.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<img src="img/stage2.jpg" class="card-img-top" alt="Information Table">
+					<img src="img/stage2.jpg" class="card-img-top" alt="Driving Simulation">
 					<div class="card-body">
 						<h5 class="card-title">2. Immersive Experience</h5>
 						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
@@ -29,7 +29,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card">
-					<img src="img/stage3.jpg" class="card-img-top" alt="Information Table">
+					<img src="img/stage3.jpg" class="card-img-top" alt="Feedback Wall">
 					<div class="card-body">
 						<h5 class="card-title">3. Feedback Wall</h5>
 						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
