update image on process page

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="col-md-3 col-lg-2 ps-0">
+<nav class="col-md-3 col-lg-2 ps-md-0">
 	<header>
 		<a class="nav-link" href="/">
 			<img class="logo" src="img/logo.svg" />
@@ -12,7 +12,7 @@
 			<a class="nav-link" id="naturalness" href="naturalness.html">Naturalness</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="technology" href="technology.html">Technology</a>
+			<a class="nav-link" id="technology" href="process.html">Process</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" id="showcase" href="showcase.html">Showcase</a>
