--- a/partials/video-content.html
+++ b/partials/video-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-5">
+<div class="col-md card p-2 p-md-3 p-lg-5">
 	<section>
     <figure class="figure video">
       <iframe src="https://www.loom.com/embed/a49f03fe2d484a8b9a7dda72ca51306e" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -56,4 +56,8 @@
 			<figcaption class="figure-caption">Fig. 6.11: Max is building muscle memory over time with the Horizon system and is able to control his favourite radio channel and temperature while driving to his office during a rush hour.</figcaption>
 		</figure>
   </section>
+	<section>
+		<h3>Title</h3>
+		<p>Text</p>
+	</section>
 </div>
