--- a/partials/index-content.html
+++ b/partials/index-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-5">
+<div class="col-md card p-2 p-md-3 p-lg-5">
 	<section>
 		<h1>Horizon</h1>
 		<h2>Naturalness in Driver–Car Interaction</h2>
