--- a/partials/people.html
+++ b/partials/people.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-4">
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4">
 	<div class="profile col">
 		<img src="img/umnah.jpg">
 		<span>Umnah Aslam</span>
