--- a/partials/process-content.html
+++ b/partials/process-content.html
@@ -1,18 +1,48 @@
 <div class="col-md card p-2 p-md-3 p-lg-5">
 	<section>
 		<h3>Methodology</h3>
-		<p>Horizon team sculpted their own non-linear process for developing the system as it is now. It was an iterative process that involves developing an understanding of the system as a whole, analysing the individual components, and then iteratively refining the design to meet the desired objectives extracted from on going research during each phase. This approach was particularly effective when used to develop MVP system that required a large number of testings and iterations.</p>
 		<figure class="figure">
 			<img src="img/methodology.svg" class="figure-img img-fluid" alt="Methodology">
 			<figcaption class="figure-caption">Fig. 3.1: Our iterative methodological process.</figcaption>
-		</figure>	
+		</figure>
+		<p>Horizon team sculpted their own non-linear process for developing the system as it is now. It was an iterative process that involves developing an understanding of the system as a whole, analysing the individual components, and then iteratively refining the design to meet the desired objectives extracted from on going research during each phase. This approach was particularly effective when used to develop MVP system that required a large number of testings and iterations.</p>
 	</section>
 	<section>
 		<h3>Literature Research</h3>
-		<p>Kicked off the process by basic understanding of controls in car divided amongst secondary and primary interactions. Also the team began exploring naturalness in driver car interaction and what could make interactions unnatural in new developing systems.> Once the team had insights we began clustering them into through the tool of affinity mapping in order to get more concrete direction on the process.</p>
 		<figure class="figure">
 			<img src="img/pri_sec_interactions.svg" class="figure-img img-fluid" alt="Primary and Secondary Interactions">
 			<figcaption class="figure-caption">Fig. 3.2: The Primary and Secondary Interactions of Driving</figcaption>
-		</figure>	
+		</figure>
+		<p>Kicked off the process by basic understanding of controls in car divided amongst secondary and primary interactions. Also the team began exploring naturalness in driver car interaction and what could make interactions unnatural in new developing systems.> Once the team had insights we began clustering them into through the tool of affinity mapping in order to get more concrete direction on the process.</p>
+	</section>
+	<section>
+		<figure class="figure">
+			<img src="img/affinity_diagram.svg" class="figure-img img-fluid" alt="Affinity Diagram">
+			<figcaption class="figure-caption">Fig. 3.3: Affinity Diagram</figcaption>
+		</figure>
+		<h3>Digital Ethnography</h3>
+		<p>Goal here was to segregate primary and secondary interactions and highlight user pains and needs through data gathered from car forums (BMW, Tesla, Rivian, Mercedes, Honda, Audi etc.) reddit forums on car experiences and youtube video comments regarding car experiences.</p>
+	</section>
+	<section>
+		<div class="row">
+			<div class="col-md-6">
+				<figure class="figure">
+					<img src="img/wordcloud_primary.svg" class="figure-img img-fluid" alt="Primary Interactions">
+					<figcaption class="figure-caption">Fig. 3.4: Primary Interactions</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-6">
+				<figure class="figure">
+					<img src="img/wordcloud_secondary.svg" class="figure-img img-fluid" alt="Secondary Interactions">
+					<figcaption class="figure-caption">Fig. 3.5: Secondary Interactions</figcaption>
+				</figure>
+			</div>
+		</div>
+		<p>Comparison of frequency in problem area clusters between primary and secondary. The frequency of secondary was found to be more problematic than primary since companies tend to digitalise them whereas users understanding of safety, good experience and naturalness is more attached with weighed controls that include some sort of recognisable physical feedbacks. Therefore the direction here onwards focused on secondary infotainment controls.</p>
+		<figure class="figure">
+			<img src="img/semantic_cloud.svg" class="figure-img img-fluid" alt="Semantic Wordcloud">
+			<figcaption class="figure-caption">Fig. 3.6: Semantic analysis of extracted terms</figcaption>
+		</figure>
+		<p>Scraped significant problem areas from secondary and traced back the user data of how they described the experience in positive, negative or neutral way so that the team can sift out intervention areas for our design solution.</p>
 	</section>
 </div>
