--- a/partials/process-content.html
+++ b/partials/process-content.html
@@ -188,5 +188,105 @@
 				</figure>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-sm-4 offset-lg-2">
+				<figure class="figure">
+					<img src="img/poster1.jpg" class="figure-img img-fluid" alt="Wheelie">
+					<figcaption class="figure-caption">Fig. 3.15: Wheelie</figcaption>
+				</figure>
+			</div>
+			<div class="col">
+				<ul class="posters">
+					<li><i class="fa-regular fa-xl fa-square-check"></i> accessible controls</li>
+					<li><i class="fa-regular fa-xl fa-square-check"></i> steering wheel placement</li>
+					<li><i class="fa-regular fa-xl fa-square-check"></i> matrix and light feedback</li>
+					<li class="xmark"><i class="fa-regular fa-xl fa-square-xmark"></i> familiarity with old system</li>
+					<li class="xmark"><i class="fa-regular fa-xl fa-square-xmark"></i> focus on primary</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4 offset-lg-2">
+				<figure class="figure">
+					<img src="img/poster2.jpg" class="figure-img img-fluid" alt="Wheelie">
+					<figcaption class="figure-caption">Fig. 3.16: Puck</figcaption>
+				</figure>
+			</div>
+			<div class="col">
+				<ul class="posters">
+					<li><i class="fa-regular fa-xl fa-square-check"></i> habitual gestures</li>
+					<li><i class="fa-regular fa-xl fa-square-check"></i> gearbox placement</li>
+					<li><i class="fa-regular fa-xl fa-square-check"></i> resting arm accessibility</li>
+					<li><i class="fa-regular fa-xl fa-square-check"></i> rotary control</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4 offset-lg-2">
+				<figure class="figure">
+					<img src="img/poster3.jpg" class="figure-img img-fluid" alt="Wheelie">
+					<figcaption class="figure-caption">Fig. 3.17: Slider Flip</figcaption>
+				</figure>
+			</div>
+			<div class="col">
+				<ul class="posters">
+					<li><i class="fa-regular fa-xl fa-square-check"></i> familiarity with old system</li>
+					<li><i class="fa-regular fa-xl fa-square-check"></i> central placement</li>
+					<li><i class="fa-regular fa-xl fa-square-check"></i> scalable</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section>
+		<h3>Field Testing</h3>
+		<p>Bet you had been waiting for this moment, yes the team went back to investigating on user research. This time to empathise with the user in their comfort driving situation of different scenarios (night and day), different contexts (highway and local everyday tasks) and different placements of infotainment controls (steering wheel, gearbox controls, master display controls).</p>
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3">
+			<div class="col">
+				<img src="img/img_test_1.jpg" class="figure-img img-fluid">
+			</div>
+			<div class="col">
+				<img src="img/img_test_2.jpg" class="figure-img img-fluid">
+			</div>
+			<div class="col">
+				<img src="img/img_test_3.jpg" class="figure-img img-fluid">
+			</div>
+			<div class="col">
+				<img src="img/img_test_4.jpg" class="figure-img img-fluid">
+			</div>
+			<div class="col">
+				<img src="img/img_test_5.jpg" class="figure-img img-fluid">
+			</div>
+			<div class="col">
+				<img src="img/img_test_6.jpg" class="figure-img img-fluid">
+			</div>
+		</div>
+	</section>
+	<section>
+		<h3>Benchmarking</h3>
+		<p>Investigating in depth current car systems and secondary controls placements varying from minimal to complex. Conclusion: less is not always more, the perfect system is a good balance of physical and digital controls placed in a predictive and familiar way.</p>
+		<figure class="figure video">
+			<img src="img/fig318legend.svg" class="figure-img img-fluid">
+			<iframe src="https://www.loom.com/embed/80d664ad42b34546ac65501a5ba7165e" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen autoplay></iframe>
+			<figcaption class="figure-caption">Fig. 3.18: Examples of current solutions</figcaption>
+		</figure>
+	</section>
+	<section>
+		<h3>Naturalness framework for secondary controls</h3>
+		<p>Once we knew our placement, answers to user needs and pains we went back to the frameworks used for naturalness in secondary controls in order to have a deeper look into what attributes we are answering and what we further need to explore for design detailing.</p>
+		<figure class="figure video">
+			<img src="img/driverincontrol.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption">Fig. 3.19: Adapted from the final 11-themed framework of driver-automobile naturalness derived from thematic analysis by Simon Ramm</figcaption>
+		</figure>
+	</section>
+	<section>
+		<h3>Positioning</h3>
+		<p>conclusion form this step back into research was the positioning opportunity for the solution in current market. The aim was to provide users with a natural interaction built through muscle memory, that keeps their focus maintained and maximises their control over the car system</p>
+		<figure class="figure video">
+			<img src="img/positioning.svg" class="figure-img img-fluid">
+			<figcaption class="figure-caption">Fig. 3.20: Transitioning into a new meaning for driver–car interactions</figcaption>
+		</figure>
+	</section>
+	<section class="highlight">
+		<img src="img/logo_horizon_arc.svg" class="figure-img img-fluid">
 	</section>
 </div>
