--- a/partials/header.html
+++ b/partials/header.html
@@ -8,5 +8,6 @@
 		<title>Horizon</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 		<link href="/css/style.css" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/916d594050.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
