add audi to process and movie to showcase

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,12 @@ section.highlight {
   color: white;
 }
 
+.featured {
+  margin-left: -1rem!important;
+  margin-right: -1rem!important;
+  width: calc(100%+2rem);
+}
+
 section.highlight span,
 span.highlight {
   color: white;
@@ -132,6 +138,11 @@ footer {
     margin-right: -1.5rem!important; 
     padding: 1.5rem!important;
   }
+  .featured {
+    margin-left: -1.5rem!important;
+    margin-right: -1.5rem!important;
+    width: calc(100%+3rem);
+  }
 }
 
 @media (min-width: 992px) {
@@ -139,6 +150,12 @@ footer {
     margin-left: -3rem!important;
     margin-right: -3rem!important;
     padding: 3rem!important;
+  }
+  
+  .featured {
+    margin-left: -3rem!important;
+    margin-right: -3rem!important;
+    width: calc(100%+6rem);
   }
   
   .figure,
