complete index and poster pages

--- a/partials/nav.html
+++ b/partials/nav.html
@@ -24,6 +24,9 @@
 			<a class="nav-link" id="video" href="video.html">Video</a>
 		</li>
 		<li class="nav-item">
+			<a class="nav-link" id="poster" href="poster.html">Poster</a>
+		</li>
+		<li class="nav-item">
 			<a class="nav-link" id="nextsteps" href="nextsteps.html">Next Steps</a>
 		</li>
 		<li class="nav-item">
