--- a/partials/showcase-content.html
+++ b/partials/showcase-content.html
@@ -97,7 +97,7 @@
 	<section>
 		<h3>Simulation Details</h3>
 		<figure class="figure">
-			<img src="img/exhibit_detail.svg" class="figure-img img-fluid rounded" alt="Information Table">
+			<img src="img/exhibit_detail.svg" class="figure-img img-fluid" alt="Information Table">
 			<figcaption class="figure-caption">Fig 4.5: Annotated Diagram of Driving Simulator</figcaption>
 		</figure>
 		<div class="row">
@@ -119,5 +119,11 @@
 				</ul>
 			</div>
 		</div>
+	</section>
+	<section>
+		<figure class="figure">
+			<img src="img/feedback.svg" class="figure-img img-fluid" alt="Feedback wall">
+			<figcaption class="figure-caption">Fig 4.6: Feedback wall</figcaption>
+		</figure>
 	</section>
 </div>
