--- a/partials/nav.html
+++ b/partials/nav.html
@@ -12,7 +12,7 @@
 			<a class="nav-link" id="naturalness" href="naturalness.html">Naturalness</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" id="technology" href="process.html">Process</a>
+			<a class="nav-link" id="process" href="process.html">Process</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" id="showcase" href="showcase.html">Showcase</a>
