--- a/partials/index-content.html
+++ b/partials/index-content.html
@@ -13,8 +13,7 @@
 		<span class="badge rounded-pill text-bg-light">Naturalness</span>
 		<span class="badge rounded-pill text-bg-light">Driver–Car Interaction</span>
 		<span class="badge rounded-pill text-bg-light">Human–Machine Interaction</span>
-		<span class="badge rounded-pill text-bg-light">Automotive</span>
-		<span class="badge rounded-pill text-bg-light">Physical Controls</span>
+		<span class="badge rounded-pill text-bg-light">Digital and Physical Controls</span>
 	</section>
 	
 	<section>
