--- a/partials/naturalness-content.html
+++ b/partials/naturalness-content.html
@@ -4,13 +4,33 @@
 			<img src="img/naturalness_scale.svg" class="figure-img img-fluid" alt="Naturalness Scale">
 			<figcaption class="figure-caption">Fig. 2.1: Simon A. Ramm (2018), Naturalness Framework for Driver–Car Interaction</figcaption>
 		</figure>
+		<div class="row">
+			<div class="col-md-4">
+				<figure class="figure">
+					<img src="img/nui_1.svg" class="figure-img img-fluid" alt="Natural User Interfaces">
+					<figcaption class="figure-caption">Fig. 2.2: Natural User Interfaces</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-4">
+				<figure class="figure">
+					<img src="img/nui_2.svg" class="figure-img img-fluid" alt="Graphical User Interfaces">
+					<figcaption class="figure-caption">Fig. 2.3: Graphical User Interfaces</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-4">
+				<figure class="figure">
+					<img src="img/nui_3.svg" class="figure-img img-fluid" alt="Command-Line Interfaces">
+					<figcaption class="figure-caption">Fig. 2.4: Command-Line Interfaces</figcaption>
+				</figure>
+			</div>
+		</div>
 		<div class="row mt-4 mb-5">
 			<div class="col-md-4">
 				<div class="card">
 					<img src="img/nat_intuitive.svg" class="card-img-top" alt="Information Table">
 					<div class="card-body">
 						<h5 class="card-title">Intuitive</h5>
-						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p class="card-text">This pertains to the affordances things have: how we think things should be interacted with. Designers need to match people's expectations with an object's functions.</p>
 					</div>
 				</div>
 			</div>
@@ -19,7 +39,7 @@
 					<img src="img/nat_familiarity.svg" class="card-img-top" alt="Information Table">
 					<div class="card-body">
 						<h5 class="card-title">Familiarity</h5>
-						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p class="card-text">We used everyday gestures that people already know: turning a physical volume knob is engrained into human behaviour. It does not require a user manual.</p>
 					</div>
 				</div>
 			</div>
@@ -28,12 +48,18 @@
 					<img src="img/nat_freedom.svg" class="card-img-top" alt="Information Table">
 					<div class="card-body">
 						<h5 class="card-title">Freedom of Control</h5>
-						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p class="card-text">The driver should be at the center of the experience, it's their car after all. Systems that operate without communicating their intent are frustrating to people.</p>
 					</div>
 				</div>
 			</div>
-		</div>
-		
-		
+		</div>		
+	</section>
+	<section>
+		<h3>Innovation</h3>
+		<p>The focus was to deliver a natural user experience, relying on familiar patterns, known gestures, and in general employing interactions that are second nature and don't require a cognitive effort. This in turn means that the technological part of our solution needs to be quasi invisible, as to not distract.</p>
+		<figure class="figure">
+			<img src="img/innovation.svg" class="figure-img img-fluid" alt="Innovation of Meaning">
+			<figcaption class="figure-caption">Fig. 2.5: Innovation of Meaning vs. Solution (Verganti, 2016)</figcaption>
+		</figure>
 	</section>
 </div>
