--- a/partials/people.html
+++ b/partials/people.html
@@ -1,34 +1,34 @@
 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4">
 	<div class="profile col">
-		<img src="img/umnah.jpg">
+		<!-- <img src="img/umnah.jpg"> -->
 		<span>Umnah Aslam</span>
 	</div>
 	<div class="profile col">
-		<img src="img/mojca.jpg">
+		<!-- <img src="img/mojca.jpg"> -->
 		<span>Mojca Fortunat</span>
 	</div>
 	<div class="profile col">
-		<img src="img/madde.jpg">
+		<!-- <img src="img/madde.jpg"> -->
 		<span>Madeleine Kiær</span>
 	</div>
 	<div class="profile col">
-		<img src="img/xiyu.jpg">
+		<!-- <img src="img/xiyu.jpg"> -->
 		<span>Xiyu Li</span>
 	</div>
 	<div class="profile col">
-		<img src="img/ruiyi.jpg">
+		<!-- <img src="img/ruiyi.jpg"> -->
 		<span>Ruiyi Liu</span>
 	</div>
 	<div class="profile col">
-		<img src="img/gustav.jpg">
+		<!-- <img src="img/gustav.jpg"> -->
 		<span>Gustav Moorhouse</span>
 	</div>
 	<div class="profile col">
-		<img src="img/jan.jpg">
+		<!-- <img src="img/jan.jpg"> -->
 		<span>Jan&nbsp;&#79;str&#111;wka</span>
 	</div>
 	<div class="profile col">
-		<img src="img/weijian.jpg">
+		<!-- <img src="img/weijian.jpg"> -->
 		<span>Weijian Xu</span>
 	</div>
 </div>
