--- a/partials/process-content.html
+++ b/partials/process-content.html
@@ -23,7 +23,7 @@
 				</figure>
 			</div>
 		</div>
-		<p>Kicked off the process by basic understanding of controls in car divided amongst secondary and primary interactions. Also the team began exploring naturalness in driver car interaction and what could make interactions unnatural in new developing systems.> Once the team had insights we began clustering them into through the tool of affinity mapping in order to get more concrete direction on the process.</p>
+		<p>Kicked off the process by basic understanding of controls in car divided amongst secondary and primary interactions. Also the team began exploring naturalness in driver car interaction and what could make interactions unnatural in new developing systems. Once the team had insights we began clustering them into through the tool of affinity mapping in order to get more concrete direction on the process.</p>
 		<figure class="figure">
 			<img src="img/affinity_diagram.svg" class="figure-img img-fluid" alt="Affinity Diagram">
 			<figcaption class="figure-caption">Fig. 3.4: Affinity Diagram</figcaption>
