add scollspy for long pages

--- a/partials/index-content.html
+++ b/partials/index-content.html
@@ -1,9 +1,10 @@
 <div class="col-md card p-3 p-md-4 p-lg-5">
-	<section>
-		<h1>Horizon</h1>
-		<h2>Naturalness in Driver–Car Interaction</h2>
+	<section class="highlight first">
+		<div class="col-md-6 offset-md-3 mb-5">
+			<img src="img/logo_white.svg" class="figure-img img-fluid" alt="Horizon">
+		</div>
 		@@include('people.html')
-		<p class="small text-muted">Milano, 14.12.2022</p>
+		<p class="small text-muted mt-5">Milano, 14.12.2022</p>
 	</section>
 	
 	<section>
