--- a/partials/process-content.html
+++ b/partials/process-content.html
@@ -1,5 +1,5 @@
-<div class="col-md card p-3 p-md-4 p-lg-5">
-	<section>
+<div class="col-md card p-3 p-md-4 p-lg-5" data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
+	<section id="ref-methodology">
 		<h3>Methodology</h3>
 		<figure class="figure">
 			<img src="img/methodology.svg" class="figure-img img-fluid" alt="Methodology">
@@ -7,7 +7,7 @@
 		</figure>
 		<p>Horizon team sculpted their own non-linear process for developing the system as it is now. It was an iterative process that involves developing an understanding of the system as a whole, analysing the individual components, and then iteratively refining the design to meet the desired objectives extracted from on going research during each phase. This approach was particularly effective when used to develop MVP system that required a large number of testings and iterations.</p>
 	</section>
-	<section>
+	<section id="ref-literature">
 		<h3>Literature Research</h3>
 		<div class="row">
 			<div class="col-md-6">
@@ -29,7 +29,7 @@
 			<figcaption class="figure-caption">Fig. 3.4: Affinity Diagram</figcaption>
 		</figure>
 	</section>
-	<section>
+	<section id="ref-ethnography">
 		<h3>Digital Ethnography</h3>
 		<p>Goal here was to segregate primary and secondary interactions and highlight user pains and needs through data gathered from car forums (BMW, Tesla, Rivian, Mercedes, Honda, Audi etc.) reddit forums on car experiences and youtube video comments regarding car experiences.</p>
 		<div class="row">
@@ -52,12 +52,14 @@
 			<figcaption class="figure-caption">Fig. 3.7: Clusters of assessment of primary and secondary interactions</figcaption>
 		</figure>
 		<p>Scraped significant problem areas from secondary and traced back the user data of how they described the experience in positive, negative or neutral way so that the team can sift out intervention areas for our design solution.</p>
-		<figure class="figure">
-			<img src="img/semantic_cloud.svg" class="figure-img img-fluid" alt="Semantic Wordcloud">
-			<figcaption class="figure-caption">Fig. 3.8: Semantic analysis of extracted terms</figcaption>
-		</figure>
+		<div class="col-md-10">
+			<figure class="figure">
+				<img src="img/semantic_cloud.svg" class="figure-img img-fluid" alt="Semantic Wordcloud">
+				<figcaption class="figure-caption">Fig. 3.8: Semantic analysis of extracted terms</figcaption>
+			</figure>
+		</div>
 	</section>
-	<section>
+	<section id="ref-interviews">
 		<h3>Interviews</h3>
 		<p>The teams goal now was to identify user pains and needs as well as users understanding of naturalness in driving context. We piked various users of different age groups at this point also to keep our target user selection open for now. Visualisation of user pains, needs and design opportunities was made through a mental model diagram allowing to empathise with the user and their understandings.</p>
 		<figure class="figure">
@@ -65,7 +67,7 @@
 			<figcaption class="figure-caption">Fig. 3.9: Empathy map with results from interviews</figcaption>
 		</figure>
 	</section>
-	<section>
+	<section id="ref-firsthand">
 		<h3>First-hand experience</h3>
 		<p>The team wanted to look at the problem areas and confirm the hypothesis by being in context as our users. Hence, the empathetic experience was made using 1000km journey made using Audi A4 Avant 2022. Throughout the journey the driver from the team spoke out loud about his problem areas or wherever he felt barriers in achieving tasks, affecting naturalness in interaction. </p>
 		<figure class="figure">
@@ -73,7 +75,7 @@
 			<figcaption class="figure-caption">Fig. 3.10: First-hand team experience driving a modern car</figcaption>
 		</figure>
 	</section>
-	<section>
+	<section id="ref-insights">
 		<h3>Overlapping insights</h3>
 		<p>With all the raw data and clusters gathered we now approached synthesising these results. Interviews, digital ethnography, literature search and empathy gathering results were then clustered and matching insights led us to reach design hints.</p>
 		<div class="card-group">
@@ -140,7 +142,7 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section id="ref-valueprop">
 		<h3>Value proposition</h3>
 		<p>Moving from research insights and a design question for the team we directed the process to head towards a meaningful solution.</p>
 		<figure class="figure">
@@ -148,12 +150,12 @@
 			<figcaption class="figure-caption">Fig. 3.11: Customer Value Proposition</figcaption>
 		</figure>
 	</section>
-	<section class="highlight">
+	<section class="highlight" id="ref-brief">
 		<h3>Concept Brief</h3>
 		<p class="mb-5">Vividly having user pains and needs ahead of us and the value of our product or service helped us develop a brief for the upcoming weeks. This was the funnel point from research to design for us, however research never stopped, wait till you see more.</p>
 		<p class="h2">Design a <span>contextual interaction</span> system that <span>minimises cognitive load</span> and <span>maximises driver control</span></p>
 	</section>
-	<section>
+	<section id="ref-concept">
 		<h3>Concept Development</h3>
 		<p>Days and days of ideation around three key goals: contextual interactions, minimise cognitive load, maximise driver control. We developed separate ideas for each through quick Crazy 8 activities and then clustered the ideas in order to give the system a visualisation.</p>
 		<div class="row">
@@ -171,7 +173,7 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section id="ref-exhibit">
 		<h3>Concept Exhibition</h3>
 		<p>3 concept designs and around 50+ peers to review it for us. The team took all the feedbacks and improvements and set the goal to develop the concept after this exhibition for design detailing of the solution.</p>
 		<div class="row">
@@ -237,7 +239,7 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section id="ref-fieldtesting">
 		<h3>Field Testing</h3>
 		<p>Bet you had been waiting for this moment, yes the team went back to investigating on user research. This time to empathise with the user in their comfort driving situation of different scenarios (night and day), different contexts (highway and local everyday tasks) and different placements of infotainment controls (steering wheel, gearbox controls, master display controls).</p>
 		<div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3">
@@ -261,16 +263,18 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section id="ref-benchmarking">
 		<h3>Benchmarking</h3>
 		<p>Investigating in depth current car systems and secondary controls placements varying from minimal to complex. Conclusion: less is not always more, the perfect system is a good balance of physical and digital controls placed in a predictive and familiar way.</p>
 		<figure class="figure video">
-			<img src="img/fig318legend.svg" class="figure-img img-fluid">
+			<div class="col-md-6 offset-md-3">
+				<img src="img/fig318legend.svg" class="figure-img img-fluid">
+			</div>
 			<iframe src="https://www.loom.com/embed/80d664ad42b34546ac65501a5ba7165e" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen autoplay></iframe>
 			<figcaption class="figure-caption">Fig. 3.18: Examples of current solutions</figcaption>
 		</figure>
 	</section>
-	<section>
+	<section id="ref-naturalness">
 		<h3>Naturalness framework for secondary controls</h3>
 		<p>Once we knew our placement, answers to user needs and pains we went back to the frameworks used for naturalness in secondary controls in order to have a deeper look into what attributes we are answering and what we further need to explore for design detailing.</p>
 		<figure class="figure video">
@@ -278,31 +282,35 @@
 			<figcaption class="figure-caption">Fig. 3.19: Adapted from the final 11-themed framework of driver-automobile naturalness derived from thematic analysis by Simon Ramm</figcaption>
 		</figure>
 	</section>
-	<section>
+	<section id="ref-positioning">
 		<h3>Positioning</h3>
 		<p>conclusion form this step back into research was the positioning opportunity for the solution in current market. The aim was to provide users with a natural interaction built through muscle memory, that keeps their focus maintained and maximises their control over the car system</p>
-		<figure class="figure video">
+		<figure class="figure">
 			<img src="img/positioning.svg" class="figure-img img-fluid">
 			<figcaption class="figure-caption">Fig. 3.20: Transitioning into a new meaning for driver–car interactions</figcaption>
 		</figure>
 	</section>
 	<section class="highlight">
-		<img src="img/logo_horizon_arc.svg" class="figure-img img-fluid">
+		<div class="col-md-6 mb-5">
+			<img src="img/logo_white.svg" class="figure-img img-fluid">
+		</div>
 		<h3>Identity</h3>
 		<p>The line where land meets sky. Focus.<p>
 		<p>The desire to explore beyond our current perspective. Control.</p>
 		<p>The feeling of something about to happen. Safety.</p>
 	</section>
-	<section>
+	<section id="ref-meaning">
 		<h3>Solution, Experience, Meaning</h3>
 		<figure class="figure">
 			<img src="img/meaning_framework.svg" class="figure-img img-fluid">
 			<figcaption class="figure-caption">Fig. 3.21: Adapted from Overcrowded (Verganti, 2016)</figcaption>
 		</figure>
-		<figure class="figure">
-			<img src="img/old_new_meaning.svg" class="figure-img img-fluid">
-			<figcaption class="figure-caption">Fig. 3.22: Remeaningfication</figcaption>
-		</figure>
+		<div class="col-md-8 mt-5">
+			<figure class="figure">
+				<img src="img/old_new_meaning.svg" class="figure-img img-fluid">
+				<figcaption class="figure-caption">Fig. 3.22: Remeaningfication</figcaption>
+			</figure>
+		</div>
 	</section>
 	<section>
 		<img src="img/render_1.jpg" class="figure-img img-fluid">
@@ -329,7 +337,7 @@
 			<figcaption class="figure-caption">Fig. 3.23: Positioning on the naturalness scale (Simon A. Ramm, 2018)</figcaption>
 		</figure>
 	</section>
-	<section>
+	<section id="ref-flows">
 		<h3>User Flows</h3>
 		<p>After analysing system defaults the team also structured user flows for these possible defaults and brainstormed other flows that might not be part of the defaults. In order to justify the contextualisation feature of Horizon the flows had similar interactions however functionality of interaction changed between the flows depending on the context.</p>
 		<figure class="figure">
@@ -349,7 +357,7 @@
 			<figcaption class="figure-caption">Fig. 3.27: User flow for fanspeed</figcaption>
 		</figure>
 	</section>
-	<section>
+	<section id="ref-testing">
 		<h3>Testing and iterations</h3>
 		<p>1st round: Interaction testing</p>
 		<div class="row">
