--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -70,6 +70,28 @@ img {
   background: #f6f8fc;
 }
 
+body nav ul li ul.home,
+body nav ul li ul.naturalness,
+body nav ul li ul.process,
+body nav ul li ul.showcase,
+body nav ul li ul.mvp,
+body nav ul li ul.video,
+body nav ul li ul.poster,
+body nav ul li ul.nextsteps {
+  display: none;
+}
+
+body.home nav ul li ul.home,
+body.naturalness nav ul li ul.naturalness,
+body.process nav ul li ul.process,
+body.showcase nav ul li ul.showcase,
+body.mvp nav ul li ul.mvp,
+body.video nav ul li ul.video,
+body.poster nav ul li ul.poster,
+body.nextsteps nav ul li ul.nextsteps {
+  display: block;
+}
+
 header .nav-link:hover {
   background: unset;
 }
@@ -78,6 +100,30 @@ header .nav-link:hover {
   background: #edf5ff;
   color: #0a58ca;
   font-weight: 500;
+}
+
+nav ul li ul {
+  margin-left: 1rem;
+}
+
+nav ul li ul li a.nav-link {
+  padding: unset;
+  background: unset;
+  margin: 0.3rem 0;
+  color: #8899ab;
+}
+
+nav ul li ul li a.nav-link.active {
+  color: inherit !important;
+  background-color: unset !important;
+  background: unset !important;
+  color: #212529;
+}
+
+nav ul li ul li a.nav-link:hover {
+  background: unset;
+  opacity: 0.86;
+  color: #212529;
 }
 
 ul.posters {
@@ -99,12 +145,17 @@ li.xmark {
 }
 
 section.highlight {
-  background-color: #224757;
+  background-color: #282A36;
   margin-top: 2rem;
   margin-left: -1rem!important;
   margin-right: -1rem!important;
   padding: 1rem!important;
   color: white;
+}
+
+section.highlight.first {
+  margin-top: -1rem;
+  border-radius:  0.375rem;
 }
 
 .featured {
@@ -113,10 +164,19 @@ section.highlight {
   width: calc(100%+2rem);
 }
 
+.featured p:last-of-type,
+.highlight p:last-of-type {
+  margin-block-end: 0;
+}
+
 section.highlight span,
 span.highlight {
   color: white;
-  background: #02070a;
+  background: #FF9900;
+}
+
+.highlight .profile span {
+  background: unset;
 }
 
 span.highlight {
@@ -138,6 +198,9 @@ footer {
     margin-right: -1.5rem!important; 
     padding: 1.5rem!important;
   }
+  section.highlight.first {
+    margin-top: -1.5rem;
+  }
   .featured {
     margin-left: -1.5rem!important;
     margin-right: -1.5rem!important;
@@ -151,13 +214,14 @@ footer {
     margin-right: -3rem!important;
     padding: 3rem!important;
   }
-  
+  section.highlight.first {
+    margin-top: -3rem;
+  }
   .featured {
     margin-left: -3rem!important;
     margin-right: -3rem!important;
     width: calc(100%+6rem);
   }
-  
   .figure,
   .figure-img {
     width: 100%;
