--- a/partials/mvp-content.html
+++ b/partials/mvp-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-3 p-md-4 p-lg-5" data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
+<div class="main-content col-md card p-3 p-md-4 p-lg-5" data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 	<section id="ref-system">
 		<h3>System map (MVP)</h3>
 		<p>Horizon is an interactive system consisting of digital and physical controls for secondary infotainment system. The digital aspects contain the cluster display, the centre stack display and the HUD display. Whereas, the physical control is the slider knob.</p>
