--- a/partials/naturalness-content.html
+++ b/partials/naturalness-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-3 p-md-4 p-lg-5">
+<div class="main-content col-md card p-3 p-md-4 p-lg-5">
 	<section>
 		<figure class="figure">
 			<img src="img/naturalness_scale.svg" class="figure-img img-fluid" alt="Naturalness Scale">
