--- a/partials/process-content.html
+++ b/partials/process-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-3 p-md-4 p-lg-5" data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
+<div class="main-content col-md card p-3 p-md-4 p-lg-5" data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" tabindex="0">
 	<section id="ref-methodology">
 		<h3>Methodology</h3>
 		<figure class="figure">
