--- a/partials/index-content.html
+++ b/partials/index-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-3 p-md-4 p-lg-5">
+<div class="main-content col-md card p-3 p-md-4 p-lg-5">
 	<section class="highlight first">
 		<div class="col-md-6 offset-md-3 mb-5">
 			<img src="img/logo_white.svg" class="figure-img img-fluid" alt="Horizon">
