--- a/partials/poster-content.html
+++ b/partials/poster-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-3 p-md-4 p-lg-5">
+<div class="main-content col-md card p-3 p-md-4 p-lg-5">
 	<section>
 		<div class="col-md-6 offset-md-3">
 			<img src="img/logo.svg" class="figure-img img-fluid">
