--- a/partials/showcase-content.html
+++ b/partials/showcase-content.html
@@ -1,4 +1,4 @@
-<div class="col-md card p-3 p-md-4 p-lg-5">
+<div class="main-content col-md card p-3 p-md-4 p-lg-5">
 	<section>
 		<figure class="figure video">
 			<iframe src="https://www.loom.com/embed/68d0411cd07d451b98d21ff516880a76" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
