delorem, add feedback points

--- a/partials/naturalness-content.html
+++ b/partials/naturalness-content.html
@@ -2,7 +2,7 @@
 	<section>
 		<figure class="figure">
 			<img src="img/naturalness_scale.svg" class="figure-img img-fluid" alt="Naturalness Scale">
-			<figcaption class="figure-caption">Fig. 2.1: Simon A. Ramm (2018), Naturalness Framework for Driver–Car Interaction</figcaption>
+			<figcaption class="figure-caption">Fig. 2.1: A framework of naturalness in driver-car interaction. (Modified from source: Ramm, 2018)</figcaption>
 		</figure>
 		<div class="row">
 			<div class="col-md-4">
@@ -59,7 +59,7 @@
 		<p>The focus was to deliver a natural user experience, relying on familiar patterns, known gestures, and in general employing interactions that are second nature and don't require a cognitive effort. This in turn means that the technological part of our solution needs to be quasi invisible, as to not distract.</p>
 		<figure class="figure">
 			<img src="img/innovation.svg" class="figure-img img-fluid" alt="Innovation of Meaning">
-			<figcaption class="figure-caption">Fig. 2.5: Innovation of Meaning vs. Solution (Verganti, 2016)</figcaption>
+			<figcaption class="figure-caption">Fig. 2.5: Innovation of Meaning vs. Solution. (Modified from source: Verganti, 2016)</figcaption>
 		</figure>
 	</section>
 </div>
