--- a/partials/process-content.html
+++ b/partials/process-content.html
@@ -334,7 +334,7 @@
 	<section>
 		<figure class="figure">
 			<img src="img/naturalness_scale.svg" class="figure-img img-fluid" alt="Naturalness Scale">
-			<figcaption class="figure-caption">Fig. 3.23: Positioning on the naturalness scale (Simon A. Ramm, 2018)</figcaption>
+			<figcaption class="figure-caption">Fig. 3.23: Positioning on the naturalness scale (Ramm, 2018)</figcaption>
 		</figure>
 	</section>
 	<section id="ref-flows">
