--- a/partials/nextsteps-content.html
+++ b/partials/nextsteps-content.html
@@ -3,6 +3,10 @@
 		<h3>Feedback</h3>
 		<ul>
 			<li>implement haptic feedback in the slider</li>
+			<li>tune HUD to work in brighter environments</li>
+			<li>analyse the subject of naturalness in other domains such as UX, trust, or algorithmic transparency</li>
+			<li>literature review of adjacent domains</li>
+			<li>design and conduct a workshop to validate the findings of Ramm (2018) and update them to today's standards and expectations of modern technologies such as voice-based interfaces</li>
 		</ul>
 	</section>
 </div>
