--- a/partials/showcase-content.html
+++ b/partials/showcase-content.html
@@ -16,7 +16,6 @@
 					<img src="img/stage1.jpg" class="card-img-top" alt="Information Table">
 					<div class="card-body">
 						<h5 class="card-title">1. Information Table</h5>
-						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
@@ -26,7 +25,6 @@
 					<img src="img/stage2.jpg" class="card-img-top" alt="Driving Simulation">
 					<div class="card-body">
 						<h5 class="card-title">2. Immersive Experience</h5>
-						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
@@ -36,7 +34,6 @@
 					<img src="img/stage3.jpg" class="card-img-top" alt="Feedback Wall">
 					<div class="card-body">
 						<h5 class="card-title">3. Feedback Wall</h5>
-						<p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 						<a data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
@@ -56,7 +53,7 @@
 							<img src="img/stage1.jpg" class="figure-img img-fluid rounded" alt="Information Table">
 							<figcaption class="figure-caption">Fig. 4.2: People getting introduced to the project</figcaption>
 						</figure>
-						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p>Initially, visitors were greeted by a team member of Horizon to explain the project and answer potential questions. The team had a video to demonstrate the product, as well as various prototypes that were made during the iterative design process.</p>
 					</div>
 				</div>
 			</div>
@@ -72,7 +69,7 @@
 							<img src="img/stage2.jpg" class="figure-img img-fluid rounded" alt="Driving Simulator">
 							<figcaption class="figure-caption">Fig. 4.3: Interacting with the system of sliding knob, center stack display, HUD and cluster screen</figcaption>
 						</figure>
-						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p>The main event was the driving simulator as a representation of the overall system. A real car seat, along with primary interactions such as pedals and steering wheel, completed the experience. People were invited to explore the Horizon system composed of HUD, cluster screen, center stack and slider knob.</p>
 					</div>
 				</div>
 			</div>
@@ -88,7 +85,7 @@
 							<img src="img/stage3.jpg" class="figure-img img-fluid rounded" alt="Feedback Wall">
 							<figcaption class="figure-caption">Fig. 4.4: Collecting valuable external input</figcaption>
 						</figure>
-						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+						<p>Finally, the feedback wall existed to collect inputs. Valuable points of view were collected and sorted into two categories of appreciation and improvements. These were then clustered and taken into consideration for future development steps.</p>
 					</div>
 				</div>
 			</div>
