--- a/partials/nextsteps-content.html
+++ b/partials/nextsteps-content.html
@@ -4,6 +4,14 @@
 		<ul>
 			<li>implement haptic feedback in the slider</li>
 			<li>tune HUD to work in brighter environments</li>
+			<li>prototyping a more accurate length of slider in the system</li>
+		</ul>
+		<h3>Next Steps</h3>
+		<ul>
+			<li>testing and comparing reaction times using the Horizon system compared to touchscreen interaction</li>
+			<li>creating a complete infotainment system architecture and implementing it</li>
+			<li>creating and testing different forms of audio feedback</li>
+			<li>validate the specific position of the slider for highest ease of use and comfort</li>
 			<li>analyse the subject of naturalness in other domains such as UX, trust, or algorithmic transparency</li>
 			<li>literature review of adjacent domains</li>
 			<li>design and conduct a workshop to validate the findings of Ramm (2018) and update them to today's standards and expectations of modern technologies such as voice-based interfaces</li>
