--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fefcfb
+  background-color: #fefcfb;
 }
 
 section:not(:first-of-type) {
@@ -55,6 +55,10 @@ img {
   height: 3em;
   width: auto;
   filter: grayscale(0.9);
+}
+
+.nav-container {
+  background-color: #fefcfb;
 }
 
 .nav-link {
@@ -186,9 +190,10 @@ footer {
 }
 
 button.navbar-toggler {
-  margin-bottom: -4rem;
+  top: 1rem;
+  right: 1rem;
   background-color: white;
-  position: fixed;
+  position: absolute;
 }
 
 .main-content.card {
