--- a/partials/nav.html
+++ b/partials/nav.html
@@ -1,5 +1,5 @@
-<div class="col-md-3 col-lg-2">
-	<nav class="sticky-top navbar navbar-expand-md" id="main-nav">
+<div class="sticky-top nav-container col-md-3 col-lg-2">
+	<nav class="navbar navbar-expand-md" id="main-nav">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
